--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@discordjs/voice": "^0.11.0",
     "discord-api-types": "^0.37.11",
     "discord.js": "^14.5.0",
+    "get-youtube-chapters": "^2.0.0",
     "libsodium-wrappers": "^0.7.10",
     "require-reload": "^0.2.2",
+    "yt-channel-info": "^3.1.1",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.2",
     "ytpl": "^2.3.0"
