--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-    "t":"OTAxNTE1NTQ3MjM2MjQ1NTQ2.YXQ_xw.LaVf8lYui8PkUlq3ACAdY1j5Xx4",
-    "token": "NTE0Nzc3MTQwNDQ1NTc3MjI3.DtnJZg.p8507XYEk_2xbtJi8VzJkTVOUpY",
+    "token": "",
     "applicationid":"514777140445577227",
     "APIkey":"AIzaSyCSHl-RE_emC5tW6l6pb9V8uI9MUOWtPZA",
     "prefix":".",
